# mhm-wheel

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
scripts/: linux.sh  macos.sh
src/mhm_pydist/: __init__.py  mhm
